iphone turbin overflow fix

--- a/assets/sass/_turbine.sass
+++ b/assets/sass/_turbine.sass
@@ -2,6 +2,7 @@
 #wind-turbine-container
   height: 100%
   left: 0
+  min-height: 568px
   position: absolute
   overflow: hidden
   right: 0
